AFoods-PSE-Item Code Type

--- a/src/Reports/AFDPSalesQuoteNA.rdl
+++ b/src/Reports/AFDPSalesQuoteNA.rdl
@@ -479,10 +479,10 @@
                   <Width>0.5657in</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>0.50159in</Width>
+                  <Width>0.53536in</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>0.57435in</Width>
+                  <Width>0.54058in</Width>
                 </TablixColumn>
                 <TablixColumn>
                   <Width>0.61863in</Width>
@@ -822,6 +822,7 @@
                                     <FontFamily>Segoe UI</FontFamily>
                                     <FontSize>8pt</FontSize>
                                     <FontWeight>Normal</FontWeight>
+                                    <Color>#333333</Color>
                                   </Style>
                                 </TextRun>
                               </TextRuns>
@@ -856,6 +857,7 @@
                                     <FontFamily>Segoe UI</FontFamily>
                                     <FontSize>8pt</FontSize>
                                     <FontWeight>Normal</FontWeight>
+                                    <Color>#333333</Color>
                                   </Style>
                                 </TextRun>
                               </TextRuns>
@@ -885,11 +887,13 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>=IIf(Fields!DPAFIUnits.Value = 0, "", Format(Fields!DPAFIUnits.Value, "#,##0.00"))</Value>
+                                  <Value>=IIf(Fields!DPAFIUnits.Value = 0, "", Format(Fields!DPAFIUnits.Value, "#,##0"))</Value>
                                   <Style>
                                     <FontFamily>Segoe UI</FontFamily>
                                     <FontSize>8pt</FontSize>
                                     <FontWeight>Normal</FontWeight>
+                                    <Format>#,0;(#,0)</Format>
+                                    <Color>#333333</Color>
                                   </Style>
                                 </TextRun>
                               </TextRuns>
@@ -928,6 +932,7 @@
                                     <FontSize>8pt</FontSize>
                                     <FontWeight>Normal</FontWeight>
                                     <Format>#,##0.00</Format>
+                                    <Color>#333333</Color>
                                   </Style>
                                 </TextRun>
                               </TextRuns>
@@ -965,6 +970,7 @@
                                     <FontFamily>Segoe UI</FontFamily>
                                     <FontSize>8pt</FontSize>
                                     <FontWeight>Normal</FontWeight>
+                                    <Color>#333333</Color>
                                   </Style>
                                 </TextRun>
                               </TextRuns>
@@ -1003,6 +1009,7 @@
                                     <FontSize>8pt</FontSize>
                                     <FontWeight>Normal</FontWeight>
                                     <Format>#,##0.00</Format>
+                                    <Color>#333333</Color>
                                   </Style>
                                 </TextRun>
                               </TextRuns>
@@ -1041,6 +1048,7 @@
                                     <FontSize>8pt</FontSize>
                                     <FontWeight>Normal</FontWeight>
                                     <Format>#,##0.00</Format>
+                                    <Color>#333333</Color>
                                   </Style>
                                 </TextRun>
                               </TextRuns>
@@ -1668,7 +1676,7 @@
                 <Paragraph>
                   <TextRuns>
                     <TextRun>
-                      <Value>=Fields!DPAFITerms.Value</Value>
+                      <Value>=First(Fields!PaymentTermsDesc.Value, "DataSet_Result")</Value>
                       <Style>
                         <FontFamily>Segoe UI</FontFamily>
                         <FontSize>8pt</FontSize>
@@ -1685,7 +1693,11 @@
               <Height>11pt</Height>
               <Width>3.23341in</Width>
               <ZIndex>18</ZIndex>
-              <Style />
+              <Style>
+                <Border>
+                  <Style>None</Style>
+                </Border>
+              </Style>
             </Textbox>
             <Textbox Name="AFI_ShipVia">
               <KeepTogether>true</KeepTogether>
@@ -2286,7 +2298,7 @@
               <Top>2.36933in</Top>
               <Left>4.83686in</Left>
               <Height>0.17448in</Height>
-              <Width>0.50159in</Width>
+              <Width>0.53536in</Width>
               <ZIndex>40</ZIndex>
               <Style>
                 <Border>
@@ -2322,9 +2334,9 @@
               </Paragraphs>
               <rd:DefaultName>Textbox12</rd:DefaultName>
               <Top>2.36933in</Top>
-              <Left>5.33845in</Left>
+              <Left>5.37222in</Left>
               <Height>0.17448in</Height>
-              <Width>0.57435in</Width>
+              <Width>0.54058in</Width>
               <ZIndex>41</ZIndex>
               <Style>
                 <Border>
@@ -2517,7 +2529,7 @@
                         <FontFamily>Segoe UI</FontFamily>
                         <FontSize>8pt</FontSize>
                         <FontWeight>Bold</FontWeight>
-                        <Format>#,##0.00</Format>
+                        <Format>'$'#,0.00;('$'#,0.00)</Format>
                       </Style>
                     </TextRun>
                   </TextRuns>
@@ -2535,7 +2547,12 @@
                 <Hidden>=IIF(Globals!PageNumber = Globals!TotalPages, False, True)</Hidden>
               </Visibility>
               <DataElementOutput>NoOutput</DataElementOutput>
-              <Style />
+              <Style>
+                <Border>
+                  <Style>None</Style>
+                </Border>
+                <rd:FormatSymbolCulture>en-US</rd:FormatSymbolCulture>
+              </Style>
             </Textbox>
             <Textbox Name="AFI_Tax">
               <KeepTogether>true</KeepTogether>
