--- a/src/Reports/AFDPSalesProformaInvoice.rdl
+++ b/src/Reports/AFDPSalesProformaInvoice.rdl
@@ -351,6 +351,9 @@
         <Field Name="AFITotalCasesFormat">
           <DataField>AFITotalCasesFormat</DataField>
         </Field>
+        <Field Name="AFoodLogo">
+          <DataField>AFoodLogo</DataField>
+        </Field>
         <Field Name="SalesLineNo">
           <DataField>SalesLineNo</DataField>
         </Field>
@@ -2058,9 +2061,10 @@
                 </Border>
               </Style>
             </Textbox>
-            <Image Name="AFI_Logo">
-              <Source>Embedded</Source>
-              <Value>logo</Value>
+            <Image Name="AFoodLogo">
+              <Source>Database</Source>
+              <Value>=Fields!AFoodLogo.Value</Value>
+              <MIMEType>image/bmp</MIMEType>
               <Sizing>FitProportional</Sizing>
               <Left>0.02228in</Left>
               <Height>0.65225in</Height>
